--- a/css/print/pdf.css
+++ b/css/print/pdf.css
@@ -188,3 +188,19 @@ ul, ol, div, p {
 .reveal small a {
 	font-size: 16pt !important;
 }
+
+.reveal #anatomy span {
+	position: static;
+}
+
+.reveal #deploying span {
+	position: static;
+}
+
+.reveal #meatdelay span {
+	position: static;
+}
+
+.reveal #meatspace p {
+	margin-top: -60px;
+}
